[gd_scene load_steps=2 format=1]

[ext_resource path="res://script/MainMenu.gd" type="Script" id=1]

[node name="Node" type="Node"]

[node name="MainMenu_UI" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 1024, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MainMenu_UI"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/margin_right = 80
custom_constants/margin_top = 40
custom_constants/margin_left = 80
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu_UI/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 40.0
margin/right = 944.0
margin/bottom = 560.0
alignment = 0

[node name="Left Space" type="Control" parent="MainMenu_UI/MarginContainer/HBoxContainer"]

rect/min_size = Vector2( 150, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 520.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenu_UI/MarginContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 154.0
margin/top = 0.0
margin/right = 507.0
margin/bottom = 520.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 136.0
margin/top = 156.0
margin/right = 216.0
margin/bottom = 364.0
alignment = 0

[node name="Label" type="Label" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 14.0
text = "Game Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Space" type="Control" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 80.0
margin/bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 72.0
margin/right = 80.0
margin/bottom = 208.0
alignment = 0

[node name="BT_Play" type="Button" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Game"
flat = false

[node name="Space" type="Control" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 80.0
margin/bottom = 54.0

[node name="BT_Options" type="Button" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 80.0
margin/bottom = 78.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Space 2" type="Control" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 82.0
margin/right = 80.0
margin/bottom = 112.0

[node name="BT_Exit" type="Button" parent="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 116.0
margin/right = 80.0
margin/bottom = 136.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="Right Space" type="Control" parent="MainMenu_UI/MarginContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 511.0
margin/top = 0.0
margin/right = 864.0
margin/bottom = 520.0

[node name="Options_UI" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 1024, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="MarginContainer" type="MarginContainer" parent="Options_UI"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Options_UI/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
alignment = 0

[node name="Left Space" type="Control" parent="Options_UI/MarginContainer/HBoxContainer"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 600.0

[node name="CenterContainer" type="CenterContainer" parent="Options_UI/MarginContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 54.0
margin/top = 0.0
margin/right = 537.0
margin/bottom = 600.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 141.0
margin/top = 100.0
margin/right = 341.0
margin/bottom = 500.0
alignment = 0

[node name="Label" type="Label" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 14.0
text = "Options"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Space" type="Control" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 200.0
margin/bottom = 118.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 122.0
margin/right = 200.0
margin/bottom = 400.0
alignment = 0

[node name="Play" type="Button" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Game"
flat = false

[node name="Space" type="Control" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 200.0
margin/bottom = 54.0

[node name="Options" type="Button" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 200.0
margin/bottom = 78.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="Space 2" type="Control" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 82.0
margin/right = 200.0
margin/bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 116.0
margin/right = 200.0
margin/bottom = 132.0
custom_constants/separation = 20
alignment = 0

[node name="Label1" type="Label" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 49.0
margin/bottom = 15.0
text = "Volume"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSlider" type="HSlider" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 69.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Space4" type="Control" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 200.0
margin/bottom = 166.0

[node name="HBoxContainer1" type="HBoxContainer" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 170.0
margin/right = 200.0
margin/bottom = 193.0
custom_constants/separation = 20
alignment = 0

[node name="Label1" type="Label" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 66.0
margin/bottom = 18.0
text = "FullScreen"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 197.0
margin/right = 200.0
margin/bottom = 220.0
custom_constants/separation = 20
alignment = 0

[node name="Label1" type="Label" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 67.0
margin/bottom = 18.0
text = "Windowed"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 0.0
margin/right = 113.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Space3" type="Control" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 224.0
margin/right = 200.0
margin/bottom = 254.0

[node name="BT_Return" type="Button" parent="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 258.0
margin/right = 200.0
margin/bottom = 278.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Right Space" type="Control" parent="Options_UI/MarginContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 541.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0

[connection signal="pressed" from="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/BT_Play" to="MainMenu_UI" method="_on_PlayButton_pressed"]

[connection signal="pressed" from="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/BT_Options" to="MainMenu_UI" method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="MainMenu_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/BT_Exit" to="MainMenu_UI" method="_on_ExitButton_pressed"]

[connection signal="toggled" from="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer1/CheckBox" to="MainMenu_UI" method="_on_FullScreenCheckbox_toggled"]

[connection signal="toggled" from="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2/CheckBox" to="MainMenu_UI" method="_on_WindowedMode_toggled"]

[connection signal="pressed" from="Options_UI/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/VBoxContainer/BT_Return" to="MainMenu_UI" method="_on_ReturnButton_pressed"]


